// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer desktop children 1`] = `
<footer
  className="YpcFooter"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_security-lock YpcIcon_width_l YpcIcon_height_l YpcFooter-IconLock"
  />
  <div
    className="YpcFooter-Content"
  >
    <div
      className="YpcFooter-Agreement"
    >
      <div>
        Children
      </div>
    </div>
  </div>
</footer>
`;

exports[`Footer desktop childrenAfter 1`] = `
<footer
  className="YpcFooter"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_security-lock YpcIcon_width_l YpcIcon_height_l YpcFooter-IconLock"
  />
  <div
    className="YpcFooter-Content"
  >
    <div
      className="YpcFooter-Agreement"
    >
      <div>
        Children
      </div>
    </div>
    <div>
      ChildrenAfter
    </div>
  </div>
</footer>
`;

exports[`Footer desktop className 1`] = `
<footer
  className="YpcFooter Test"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_security-lock YpcIcon_width_l YpcIcon_height_l YpcFooter-IconLock"
  />
  <div
    className="YpcFooter-Content"
  >
    <div
      className="YpcFooter-Agreement"
    />
  </div>
</footer>
`;

exports[`Footer touch-phone children 1`] = `
<footer
  className="YpcFooter"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_security-lock YpcIcon_width_l YpcIcon_height_l YpcFooter-IconLock"
  />
  <div
    className="YpcFooter-Content"
  >
    <div
      className="YpcFooter-Agreement"
    >
      <div>
        Children
      </div>
    </div>
  </div>
</footer>
`;

exports[`Footer touch-phone childrenAfter 1`] = `
<footer
  className="YpcFooter"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_security-lock YpcIcon_width_l YpcIcon_height_l YpcFooter-IconLock"
  />
  <div
    className="YpcFooter-Content"
  >
    <div
      className="YpcFooter-Agreement"
    >
      <div>
        Children
      </div>
    </div>
    <div>
      ChildrenAfter
    </div>
  </div>
</footer>
`;

exports[`Footer touch-phone className 1`] = `
<footer
  className="YpcFooter Test"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_security-lock YpcIcon_width_l YpcIcon_height_l YpcFooter-IconLock"
  />
  <div
    className="YpcFooter-Content"
  >
    <div
      className="YpcFooter-Agreement"
    />
  </div>
</footer>
`;
